[metadata]
name = cult
version = 0.0.2
url = https://github.com/thorwhalen/cult
packages = 
		cult
		cult.sources
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Religious texts search engine
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

