[metadata]
name = cult
version = 0.0.3
url = https://github.com/thorwhalen/cult
packages = 
		cult
		cult.sources
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Religious texts search engine
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
	graze
	grub
	py2store

